# P.Web-2.14

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 0113f7a3fe4f_init.py  01b0166cba7f_init.py  103788abaf08_init.py  3647bdf1f909_init.py  3712f94dcbc9_init.py  3bbdb36c0b30_init.py  3f7fc1859f5d_init.py  5770fefc6466_init.py  59f2a05ac3e6_init.py  74c5c6d1d0f0_init.py  8b65148e462d_init.py  92a17efc06f4_init.py  97d31f91f014_init.py  a1da39857d67_init.py
src/: schemas.py
src/database/: models.py
src/repository/: authusers.py  users.py
src/routes/: auth.py  avatar.py  users.py
src/services/: auth.py  email.py
tests/: test_route_auth.py  test_unit_repository_authusers.py  test_unit_repository_users.py
